# Relay

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md
crates/relay_agent/: Cargo.toml
crates/relay_agent/src/: adapters.rs  lib.rs
crates/relay_app/: Cargo.toml
crates/relay_app/src/: main.rs  runtime.rs
crates/relay_core/: Cargo.toml
crates/relay_core/src/: command.rs  error.rs  ids.rs  lib.rs  task.rs  task_event.rs  task_projection.rs
crates/relay_diff/: Cargo.toml
crates/relay_diff/src/: lib.rs
crates/relay_gallery/src/: gallery.rs  main.rs  workbench_demo.rs
crates/relay_gallery/src/gallery/: command_scene.rs  foundations_scene.rs  settings_scene.rs  shared.rs  terminal_scene.rs
crates/relay_gallery/src/workbench_demo/: center.rs  context.rs
crates/relay_infra/: Cargo.toml
crates/relay_infra/src/: logging.rs  paths.rs
crates/relay_persistence/: Cargo.toml
crates/relay_persistence/src/: lib.rs  migrations.rs  settings_repository.rs  task_repository.rs
crates/relay_preview/: Cargo.toml
crates/relay_preview/src/: lib.rs
crates/relay_project/: Cargo.toml
crates/relay_project/src/: lib.rs
crates/relay_terminal/: Cargo.toml
crates/relay_terminal/src/: lib.rs
crates/relay_ui/: Cargo.toml
crates/relay_ui/src/: app_shell.rs  components.rs  diff_pane.rs  lib.rs  preview_pane.rs  task_list.rs  terminal_pane.rs  theme.rs  workbench.rs
crates/relay_ui_kit/: Cargo.toml
crates/relay_ui_kit/src/: controls.rs  input.rs  lib.rs  row.rs  structure.rs
crates/relay_ui_kit/src/shell/: toolbar.rs
crates/relay_worktree/: Cargo.toml
crates/relay_worktree/src/: lib.rs  remote.rs
docs/: README.md  architecture-investigation.html  rfc-001-domain-model.md  rfc-002-crate-layout.md  rfc-003-agent-runtime.md  rfc-004-ui-workbench.md
docs/adr/: 0001-use-gpui.md  0002-use-provider-boundaries.md  0003-cli-agent-first.md  0004-use-published-gpui-crate-first.md  0005-evaluate-rio-terminal-rendering.md  0006-extract-ui-kit-gallery.md
docs/design/: README.md  UI_QA.md
docs/design/prompts/: ui-implementation.md
docs/reviews/: 2026-06-19-ui-kit-motion-architecture.md
scripts/: capture-relay-window.ps1
