[workspace]
resolver = "2"
members = [
    "crates/relay_app",
    "crates/relay_core",
    "crates/relay_persistence",
    "crates/relay_ui",
    "crates/relay_infra",
]
default-members = ["crates/relay_app"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
directories = "6"
gpui = "0.2.2"
relay_core = { path = "crates/relay_core" }
relay_infra = { path = "crates/relay_infra" }
relay_persistence = { path = "crates/relay_persistence" }
relay_ui = { path = "crates/relay_ui" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27.0"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
