[workspace]
resolver = "2"
members = [
    "crates/relay_agent",
    "crates/relay_app",
    "crates/relay_core",
    "crates/relay_diff",
    "crates/relay_persistence",
    "crates/relay_preview",
    "crates/relay_project",
    "crates/relay_terminal",
    "crates/relay_ui",
    "crates/relay_ui_kit",
    "crates/relay_worktree",
    "crates/relay_infra",
    "crates/relay_gallery",
]
default-members = ["crates/relay_app"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
directories = "6"
gpui = "0.2.2"
open = "5.3.5"
pulldown-cmark = "0.13.4"
regex = "1.12.2"
relay_agent = { path = "crates/relay_agent" }
relay_core = { path = "crates/relay_core" }
relay_diff = { path = "crates/relay_diff" }
relay_infra = { path = "crates/relay_infra" }
relay_persistence = { path = "crates/relay_persistence" }
relay_preview = { path = "crates/relay_preview" }
relay_project = { path = "crates/relay_project" }
relay_terminal = { path = "crates/relay_terminal" }
relay_ui = { path = "crates/relay_ui" }
relay_ui_kit = { path = "crates/relay_ui_kit" }
relay_worktree = { path = "crates/relay_worktree" }
portable-pty = "0.9.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
unicode-segmentation = "1.13"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2.5.8"
which = "6.0.3"
