[package]
name = "relay_agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
regex.workspace = true
relay_core.workspace = true
relay_terminal.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
