[package]
name = "relay_app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
relay_core.workspace = true
relay_infra.workspace = true
relay_persistence.workspace = true
relay_project.workspace = true
relay_ui.workspace = true
time.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
