[package]
name = "relay_preview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
open.workspace = true
regex.workspace = true
relay_core.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
