[package]
name = "relay_project"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
relay_core.workspace = true
relay_worktree.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
